--- a/src/data/grammar/headlines/mtg-gatherer.yaml
+++ b/src/data/grammar/headlines/mtg-gatherer.yaml
@@ -32,7 +32,8 @@
         "for more information on [_topic:#gameConcept#,#cardCategory.s#,#_randomTopic#]#_topic#, see the [_set:#cardSet#,#teaserCardSet#]#_set# mechanics article at <a href=\"\">#_gathererRulingImageArticleUrl#</a>.",
         "[_card2:#randomRealCard#][_card3:#randomCardAlone#]In a Commander game, your commander may be #_cardname# or #_card2#, and the other may be in your deck. If they meld into #_card3#, #_card3# will also be your commander.",
         "#opalRuling#",
-        # "If you're [_doingWhat:casting a spell,activating the ability of #cardPermanentType.a#,"
+        "If you're [_doingWhat:casting a spell,activating the ability of #cardPermanentType.a#,"
+        "Each player #heOrShePronouns# [_doesWhat:#randomKeywordActionWithPronoun#,#playersEffectAction#]#_doesWhat#. [_who:the active player,the nonactive player,the #adjSuperlative# player,#person#,your #personRelationalUnique#,the player with the worst deck][_starting: starting with #_who##comma#]Then#_starting# each player [_want:want#s#,wish#es#,would like][_what:#cardCategory# #they# control#s#,#cardCategoryTerm#,#itemNoun# #they# #_want#][_doesWhatNext:chooses #_what.a# to #keywordCardAction#,#playersEffectAction#]#_doesWhatNext#[_normally:normally,usually,typically][_parenthetical:, (#_normally# #normalParentheticalScenario#)]#_parenthetical#.",
         "[_whoControls:you control,you control,you control,your opponent controls,the active player controls][_token:#creatureTypes# token][_cardCategory:#cardCategory#][_what:first,last,activated,triggered,targeted,#keywordAction.lowercase#][_controlledThing:#_what# ability,#_what# ability,#_cardCategory#,#_token#][_firstLast:,first ,last ][_last:, last][_counter:#counterType# counter][_abilityVerb:#cardAbilityVerb#][_abilityVerbed:#_past#][_counterReceiver:#_cardname#,it][_whatThen:give it its #_counter#,create the#_last# #_token#,#_abilityVerb# the#_last# #_cardCategory#,place the#_last# #_counter# on #_counterReceiver#][_counterAction:removed,removed,added][_whatNext:#_counter# is #_counterAction#,ability resolves][_however:However#comma#,Keep in mind that,Remember#comma# though,Remember that,Don't forget that][_target:,target ,#cardState# ][_num:zero,#count#,#count#,#count#][_choices:#_num# #_target#permanents,up to #_num# #_target##_cardCategory.s#,any number of players][_other:other ,additional ][_choice:choose #_choices#,choose up to #cardCopyCount# #_other##_cardCategory##s#][_choiceFor:as targets,to be #_abilityVerbed#,at random][_game:first,second,third][_condition:, if you want, if it's the #_game# game of the match, if the head judge allows it, if your opponent isn't paying attention, to receive the #_counter.s#][_part1:#_whoControls# the #_controlledThing##comma# no matter who #_firstLast#activated the ability to #_whatThen#.][_imperative:must,may,may optionally,are required to][_part2:You #_imperative# #_abilityVerb# #_cardname# as its last #_whatNext#.][_part3:you can #_choice# #_choiceFor##_condition#.][_ruling:#_part1#,#_part2#,#_part3#,#_part1# #_part2#,#_part2# #_however# #_part3#,#_part1# #_part2# #_however# #_part3#]#_ruling#",
         "[_if:If,As long as,Provided that,At the beginning of #gameStep##comma# if]#_if# the player who [_abilityVerb:#cardAbilityVerb#][_didWhat:controlled,targeted,#_past#]#_didWhat# #_cardname# [_which:first ,second ,last ,#keyword.lowercase# ][_verbed:triggered,resolved,was put on the stack,was activated][_when:as its #_which# ability #_verbed#,before its #_which# ability #_verbed#,at the beginning of the turn,last turn,at the end of the #gameStep#]#_when# [_abilityResult:resolves,resolves,triggers,triggers again][_it:it,#_cardname#,#realCard#][_controlsIt:controls #_it#,doesn't control #_it#,still controls #_it#,no longer controls #_it#,has forgotten about #_it#,is confused,leaves the tournament venue,shuffles their library,asks for a takeback,calls a judge,moves to combat][_ability:that ability,its #keyword.lowercase# ability][_doesWhat:#_controlsIt# as #_ability# #_abilityResult#]#_doesWhat#, #_cardname# [_prep1:must,won't,can't]#_prep1# be [#cardAbilityVerb#][_abilityVerbed:#_past#,returned to your hand,returned to your hand,discarded,discarded,sacrificed,sacrificed,put into in your graveyard,placed on top of your library]#_abilityVerbed#.[_however:however,until end of turn][_prep2:still,now,no longer,suddenly][_isWhat:it's #_prep2# #cardState#,has #cardCopyCount# #counterType# counter#s# on it,you can't explain how it got there,your opponent is #disqualifyingAction#][_imperative:must,may,may optionally,are required to] [_prep3:,immediately ][_again:, again][_zone:library,hand,graveyard,nonland permanents,opponents' #cardCategory.s#][_abilityTarget:#cardCategory.a#,an untapped land,a copy of #randomNonlandCard#,your #_zone#,up to one target #cardType.s#][_abilityResult:resolve,be countered,trigger again][_winLose:win,lose,immediately win,immediately lose,must concede][_then:you #_imperative# #keywordAction.lowercase# #_abilityTarget#,its #_which# ability will immediately #_abilityResult#,you #_imperative# #_prep3##gameAction##_again#,you #_winLose# the game,good luck with that,call a judge][_secondPart:, #_however.capitalize##comma# if it's #_prep2# #cardLocation# and #_isWhat##comma# #_then#.]#_secondPart#",
         "your #cardCategory.s# can help cast this spell.",
@@ -119,16 +120,16 @@
     ],
 
     "playersEffectAction": [
-      "gains #n1-5# life",
-      "loses #n1-5# life",
+      "gains #num1-5# life",
+      "loses #num1-5# life",
       "draws #cardCopyCount# card#s#",
       "discards #cardCopyCount# card#s#",
       "sacrifices #cardCopyCount# permanent#s#",
       "reveals his or her hand",
       "secretly [_what:chooses a number,chooses a permanent they control,names a card]#_what#",
       "[_xEquals:equal to the number][_xIs:#comma# where X is the number][_doesWhat:gains life #_xEquals#,loses life #_xEquals#,draws cards #_xEquals#,creates an X/X #creatureTypes# token #_xIs#,puts the top X cards of his or her library into his or her graveyard#_xIs#]#_doesWhat# of [_zone:hand,library,graveyard][_quantity:#cardPermanentType.s# he or she controls,#cardCategory.s# he or she controls,cards in his or her #_zone#]#_quantity#",
-      "draws #n1-5# cards",
-      "[_doesWhat:discards a card,untaps a number of permanents,sacrifices #cardPermanentType.s#]#_doesWhat# for each [_whatType:#cardPermanentType.s#,#cardCategory.s# he or she controls]#_whatType# [_quantity:he or she controls,in his or her graveyard]#_quantity#"
+      "draws #cardCopyCount# card#s#",
+      "[_doesWhat:discards a card,untaps a number of permanents,sacrifices #cardPermanentType.s#]#_doesWhat# for each[_turn:turn,game][_where:#they# control#s#,on the battlefield,they played this #_turn#][_whatType:#cardPermanentType#,#cardCategory#] #_whatType# #_where#[_quantity:he or she controls,in his or her graveyard]#_quantity#"
     ],
 
     "informalRule": [
@@ -138,5 +139,29 @@
       "last known information",
       "summoning sickness",
       "#verbStrictlyIntransitiveGerund# sickness"
+    ],
+
+    "normalParentheticalScenario": [
+      "with their eyes closed",
+      "without seeing what the other players are doing",
+      "while humming #songsToHum#",
+      "without understanding [_what:what is happening,what they are doing,the implications of this]#_what#",
+      "nobody wants to do this",
+      "this is a stupid idea",
+      "while rubbing their #bodypartsInPairs#",
+    ],
+
+    "songsToHum": [
+      "“Oh, Susanna”",
+      "“Mambo Number 5”",
+      "“On Top of Old Smokey”",
+      "“Turkey in the Straw”",
+      "“The Flintstones theme song”",
+      "“Memories”",
+      "the “Thong Song”",
+      "“The Final Countdown”",
+      "“Anotherone Bites the Dust”",
+      "the 1812 Overture",
+      "circus music",
     ]
 }
