--- a/src/data/grammar/headlines/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/headlines/mtg-card-of-the-day.yaml
@@ -38,7 +38,7 @@ cotdTitle:
 cotdDescription:
   - "This blast from the [_time:future,past,future,past,present,distant future,distant past]#_time# is [_here:here,back]#_here#, and it's still the only way for a player to #marginalThingToDo#! Although with #keyword.lowercase# coming back, we can't promise that [_promise:any keyword is really off limits from now on,we're not going to put this ability on #rarity.a# in the next set,that we have any idea what we're doing,it still actually works within the rules]#_promise#."
   - "When your opponent plays #kindaGood.a# spell, your first [_cardlinkName:#cardWhichDrawsCards#]#_cotdHtmlCardLink# is probably to try to cause them to have a [_cardlinkName:#cardWhichCountersSpells#]#_cotdHtmlCardLink#."
-  - "This card seems [_kindaGood:#_cardKindaGood#]#_kindaGood#...until you realize that #surprisingResult#. Then it [_result:becomes #reallyGood#,seems really #_kindaGood#]#_result#."
+  - "This card seems [_kindaGood:#_cardKindaGood#]#_kindaGood#...until you realize that [_realization:#cardSurprisingResult#,#cardSurprisingResult#,#cardSurprisingResult#,#cardSurprisingResult#,it's #_cardRarity1.lowercase.a#,it's #_cardSomeTypeOrSubtype1.lowercase.a#]#_realization#. Then it [_result:becomes #reallyGood#,seems really #_kindaGood#]#_result#."
   - "Every player aspires to have as many [_cardlinkName:#_cardname.sIfNeeded#]#_cotdHtmlCardLink# as they have #mtgColors# #deckArchOrCategory# decks."
   - "#multicolor# #deckLimitedArchetype.capitalize# may be the favored deck for this card, but that doesn't mean #multicolor# #keyword# isn't always happy to have another tool in its [_toolbox:back pocket,arsenal,toolbox,kit,playbook]#_toolbox#!"
   - "Step one: #randomKeywordCardAction.capitalize#[_payoff:,,#gameActionPayoff#]. Step two: [_noise:#soundEmanation#]#_noise.capitalize# [_how:at #_them#,#adverb#]#_how# (#gameActionReaction#). Step three: [_nextStep:one,two][_step3:profit,#verbReflexive# yourself,#verbStrictlyIntransitive#,Go to Step #_nextStep#]#_step3.capitalize#. Optional step four: [_verb1:pet,#verbTransitive#][_pet:#_cardSomeCreatureType1##neutralPronouns#][_verb2:thank,berate,praise,congratulate,confront,salute,applaud,tease][_goodPet:good #_pet#,#adj# #_pet#][_verb3:#verbIntransitiveGerund#,#verbReflexiveGerund# #themselves#,being #_goodPet.a#][_activityAdj:leisurely,long,quiet,well-deserved][_activityTime:morning,afternoon,evening,weekend,day,week][_activityVerb:practice,take up,research,plan #_activityAdj.a# #_activityTime# of][_activity:#nounActivity#,#verbIntransitiveGerund#][_step4:#_verb1# your #_pet# and #_verb2# #them# for #_verb3#,practice #nounActivity#]#_step4.capitalize#."
@@ -355,34 +355,6 @@ cotdPersonality:
 - "#character#"
 - "#pro#"
 - "#historicalFigure#"
-
-marginalThingToDo:
-  - gain protection from a single color
-  - band two creatures together
-  - combine two cards together in one sleeve
-  - rotate cards through space and time to reveal their secret third sides
-  - conditionally gain one life
-  - swap the order of layers 3 and 5
-  - "draw one card#comma# then put it back"
-  - "reveal the [_where:top,bottom,first,last,middle]#_where# card #cardLocation#"
-  - "continue [_acting:drawing cards,gaining life,playing lands,talking,shuffling,blocking,searching your library]#_acting# after losing the game"
-  - reduce the casting cost of red enchantments by 1 generic mana
-  - "delay combo kills by precisely #count# turns"
-  - "destroy #cardCategory.s# in #mtgColors#"
-  - peek at the top card of your library
-
-surprisingResult:
-  - "it means there's a legendary #creatureTypes.capitalize# token to be had"
-  - "it allows you to play #cardCategory.a# for free"
-  - "it's the only card in Magic that lets you #marginalThingToDo#"
-  - "it can let you take up to #count# extra turns"
-  - "you get to return it to your hand"
-  - "you can combo it with [_cardlinkName:#cardAlone#]#_cotdHtmlCardLink#"
-  - "it's going to be [_future:#rarity.a#,#rarity.a#,reprinted]#_future# in [_italicText:#teaserCardSet.capitalizeAll#]#_italicize#"
-  - "it's #_cardRarity1.lowercase.a#"
-  - "it's #_cardtype.lowercase.a#"
-  - "it lets you #randomKeywordAction#"
-  - "it enables you to #randomKeywordAction#"
 
 cardWhichDrawsCards:
   - Ancestral Vision
