randomKeywordCardAction, not randomKeyworCarddAction

--- a/src/data/grammar/mtg/card-related/card-random-action.yaml
+++ b/src/data/grammar/mtg/card-related/card-random-action.yaml
@@ -1,5 +1,5 @@
 randomKeywordAction: "#youPronouns##randomKeywordActionWithPronoun#"
-randomKeyworCarddAction: "#youPronouns##randomKeywordCardActionWithPronoun#"
+randomKeywordCardAction: "#youPronouns##randomKeywordCardActionWithPronoun#"
 
 # expects #pronoun# to be selected
 randomKeywordActionWithPronoun:
