--- a/src/data/grammar/images/mtg-gatherer-image.yaml
+++ b/src/data/grammar/images/mtg-gatherer-image.yaml
@@ -2,6 +2,9 @@
 gathererRulingImage: |
   [_cardname:#randomCardAlone#][gathererHeadline:#gathererIntro# #_cardname#]#gathererHeadline# {htmlImg htmlImgString=`#_gathererRulingImage#`}
 
+gathererMtgLogoImage:
+- "./src/data/images/mtg-logos/gatherer/gatherer-mtg-logo.png"
+
 _gathererRulingImage: "#_gathererRulingImageStyle# #_gathererRulingImageTable#"
 
 _gathererRulingImageStyle: |
@@ -16,8 +19,8 @@ _gathererRulingImageStyle: |
       td
         << border-collapse: separate; border-spacing: 2px; text-align: center; vertical-align: middle padding: 5px; margin: 0; background: rgb(61,61,61); >>
       td.rulingsHeader
-        << background: rgb(31,30,30); >> div.rulingsHeader << font-family: Open Sans Semibold; font-size: 19px; padding: 6px; background: rgb(31,30,30); >>
-      td.rulingDate
+        << background: rgb(31,30,30); >> div.rulingsHeader << font-family: Open Sans Semibold; font-size: 19px; padding: 2px; background: rgb(31,30,30); >>
+     td.rulingDate
         << width: 70px; font-size: .9em; padding-left: 10px; padding-right: 8px; font-weight: bold; text-align: right; border-spacing: 1px; font-family: Open Sans; >>
       td.rulingText
         << width: auto; font-size: .9em; padding: 6px 8px 6px 8px; line-height: 1.3em; font-weight: 500; text-align: left; border-spacing: 1px; font-family: Open Sans; margin-top: 6px; margin-bottom: 6px; -webkit-text-stroke: 0.5px; >>
@@ -25,6 +28,8 @@ _gathererRulingImageStyle: |
         << background-color: rgb(61,61,61); >> td.evenItem << background-color: rgb(58,57,57); >> a:link << color: rgb(120,120,120); visited font-size: .8em; >>
       a:visited
         << color: rgb(120,120,120); font-size: .8em; >>
+      div.cardnameHeader
+        << font-family: 'Beleren'; font-weight: bold; font-size: 22pt; line-height: 80%; color: rgb(230,230,230); background-color: rgb(31,30,30); padding-bottom: 12px; >>        
     </style>
   </head>
 
@@ -37,7 +42,7 @@ _gathererRulingImageTable: |
     </div>
   </body>
 
-_gathererRulingImageTableContents: "#_gathererRulingImageHeader# #_gathererRulingImageTableRulings#"
+_gathererRulingImageTableContents: "#_gathererLogoHeader# #_gathererRulingImageHeader# #_gathererRulingImageTableRulings#"
 
 _gathererRulingImageTableRulings:
   - "#_gathererRulingImageRowOdd# #_gathererRulingImageRowEven#"
@@ -45,6 +50,14 @@ _gathererRulingImageTableRulings:
   - "#_gathererRulingImageRowOdd# #_gathererRulingImageRowEven# #_gathererRulingImageRowOdd#"
   - "#_gathererRulingImageRowOdd# #_gathererRulingImageRowEven# #_gathererRulingImageRowOdd#"
   - "#_gathererRulingImageRowOdd# #_gathererRulingImageRowEven# #_gathererRulingImageRowOdd# #_gathererRulingImageRowEven#"
+
+_gathererLogoHeader: |
+  <tr>
+    <td colspan="2">
+      <div class="rulingsHeader"><img src="#gathererMtgLogoImage#"></div>
+      <div class="cardnameHeader">#_cardname#</div>
+    </td>
+  </tr>
 
 _gathererRulingImageHeader: |
   <tr class="rulingsHeader">
